app/Step_5_DeploySpringBootApp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geosearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geosearch
  template:
    metadata:
      labels:
        app: geosearch
    spec:
      containers:
      - name: geosearch-app
        image: user1.harbor.mcnichol.rocks/library/harbor-geosearch:4.0
        ports:
        - containerPort: 8080
        imagePullPolicy: Always
      serviceAccountName: userserviceaccount
